# python-number-system

./: README.md  pyproject.toml
number_system/: main.py
